<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/third"
        android:scaleType="fitCenter"/>

    <TextView
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/third"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/register"
        android:textSize="12sp"
        android:gravity="center"
        android:background="@color/blue_light"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_question_account"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/login"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/blue_light"/>

    </LinearLayout>

</LinearLayout>
