<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplashScreenActivity"
    android:gravity="center"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="20dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/splash_screen"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:lines="2"
        android:textSize="24sp"
        android:textStyle="normal"
        android:text="@string/label_welcome"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:lines="3"
        android:textSize="16sp"
        android:text="@string/introduction_app"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_question_account"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/login"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/blue_light"/>

    </LinearLayout>

</LinearLayout>
